<resources>
    <string name="app_name">Touristi</string>
    <string name="title_activity_s1">s1Activity</string>
    <string name="splash_content_description">splash screen image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="brand">rubicon</string>
    <string name="skip_login_text">Skip for now</string>
    <string name="welcome_subtitle">Login to enjoy something lol I am going to go on for just a bit longer</string>
</resources>
