<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_dark_1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:layout_marginHorizontal="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/rochester"
            android:gravity="center"
            android:text="@string/brand"
            android:textColor="@color/app_light_2"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/quicksand"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/app_light_1"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_light"
            android:gravity="center"
            android:text="@string/welcome_subtitle"
            android:textColor="@color/app_light_1"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/prompt_email"
            android:textColorHint="@color/app_light_1_faded"
            app:boxCornerRadiusBottomEnd="@dimen/box_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_radius"
            app:boxCornerRadiusTopStart="@dimen/box_radius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/colorPrimary"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="@color/app_light_1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/app_light_1_faded"
            app:boxCornerRadiusBottomEnd="@dimen/box_radius"
            app:boxCornerRadiusBottomStart="@dimen/box_radius"
            app:boxCornerRadiusTopEnd="@dimen/box_radius"
            app:boxCornerRadiusTopStart="@dimen/box_radius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/app_light_1" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:visibility="gone"
        app:cornerRadius="@dimen/box_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btn_skip"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />
    <!--    <EditText-->
    <!--        android:id="@+id/username"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginTop="96dp"-->
    <!--        android:layout_marginEnd="24dp"-->

    <!--        android:hint="@string/prompt_email"-->
    <!--        android:inputType="textEmailAddress"-->
    <!--        android:selectAllOnFocus="true"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/password"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="24dp"-->

    <!--        android:hint="@string/prompt_password"-->
    <!--        android:imeActionLabel="@string/action_sign_in_short"-->
    <!--        android:imeOptions="actionDone"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:selectAllOnFocus="true"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/username" />-->

    <!--    <Button-->
    <!--        android:id="@+id/login"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="start"-->
    <!--        android:layout_marginStart="48dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginEnd="48dp"-->
    <!--        android:layout_marginBottom="64dp"-->
    <!--        android:enabled="false"-->
    <!--        android:text="@string/action_sign_in"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/password"-->
    <!--        app:layout_constraintVertical_bias="0.2" />-->

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>